Fix aligning of code in headings

--- a/_sass/bootstrap/_code.scss
+++ b/_sass/bootstrap/_code.scss
@@ -13,7 +13,7 @@ samp {
 
 // Inline code
 code {
-  padding: 2px 4px;
+  padding: 0px 4px;
   font-size: 90%;
   color: $code-color;
   background-color: $code-bg;
@@ -22,7 +22,7 @@ code {
 
 // User input typically entered via keyboard
 kbd {
-  padding: 2px 4px;
+  padding: 0px 4px;
   font-size: 90%;
   color: $kbd-color;
   background-color: $kbd-bg;
